// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`server capability snapshots > hackerspub > adapter 1`] = `"hackerspub"`;

exports[`server capability snapshots > hackerspub > capabilities 1`] = `
{
  "accounts.followers": "unknown:static",
  "accounts.following": "unknown:static",
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "supported:static",
  "accounts.updateProfile": "unknown:static",
  "auth.oauth.authorizationCode": "unsupported:probe:HackersPub does not use OAuth.",
  "auth.oauth.clientCredentials": "unknown:static",
  "auth.oauth.refreshToken": "unsupported:static:HackersPub does not expose OAuth refresh tokens.",
  "auth.passkey": "unknown:static",
  "auth.tokenInjection": "supported:static",
  "instance.nodeInfo": "supported:static",
  "instance.oauthMetadata": "unknown:static",
  "instance.peers": "unknown:static",
  "lists.create": "unknown:static",
  "lists.delete": "unknown:static",
  "lists.members": "unknown:static",
  "lists.read": "unknown:static",
  "lists.update": "unknown:static",
  "media.delete": "unknown:static",
  "media.remoteUrlUpload": "unknown:static",
  "media.update": "unknown:static",
  "media.upload": "unsupported:static:HackersPub can upload images, but its createNote GraphQL API cannot attach uploaded media.",
  "media.urlIngestion": "unknown:static",
  "notifications.clear": "unknown:static",
  "notifications.dismiss": "unknown:static",
  "notifications.grouped": "unknown:static",
  "notifications.list": "unknown:static",
  "notifications.pleromaChatMention": "unknown:static",
  "notifications.pleromaEmojiReaction": "unknown:static",
  "notifications.unreadCount": "unknown:static",
  "polls.create": "unsupported:static:HackersPub poll creation is not mapped yet.",
  "polls.read": "supported:static",
  "polls.vote": "supported:static",
  "posts.create": "supported:static",
  "posts.delete": "supported:static",
  "posts.history": "unknown:static",
  "posts.quote": "supported:static",
  "posts.read": "supported:static",
  "posts.reply": "supported:static",
  "posts.translate": "unknown:static",
  "posts.update": "unknown:static",
  "search.accounts": "supported:static",
  "search.hashtags": "unsupported:static:HackersPub hashtag search is not mapped by this adapter yet.",
  "search.posts": "supported:static",
  "social.block": "supported:static",
  "social.bookmark": "supported:static",
  "social.bookmarkFolders": "unknown:static",
  "social.boost": "supported:static",
  "social.favourite": "supported:static",
  "social.follow": "supported:static",
  "social.mute": "unsupported:static:HackersPub social actions are not mapped yet.",
  "social.reaction": "supported:static",
  "streaming.conversations": "unknown:static",
  "streaming.notifications": "unknown:static",
  "streaming.timeline": "unknown:instance",
  "timelines.hashtag": "unsupported:static:HackersPub hashtag timelines are not mapped yet.",
  "timelines.home": "supported:static",
  "timelines.list": "unknown:static",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;

exports[`server capability snapshots > hollo > adapter 1`] = `"hollo"`;

exports[`server capability snapshots > hollo > capabilities 1`] = `
{
  "accounts.followers": "unknown:static",
  "accounts.following": "unknown:static",
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "unsupported:static:Hollo relationship reads are not compatible with the Mastodon relationship API.",
  "accounts.updateProfile": "unknown:static",
  "auth.oauth.authorizationCode": "supported:oauth",
  "auth.oauth.clientCredentials": "unknown:static",
  "auth.oauth.refreshToken": "unsupported:static:This adapter does not assume refresh-token support.",
  "auth.passkey": "unknown:static",
  "auth.tokenInjection": "supported:static",
  "instance.nodeInfo": "supported:static",
  "instance.oauthMetadata": "unknown:static",
  "instance.peers": "unknown:static",
  "lists.create": "unknown:static",
  "lists.delete": "unknown:static",
  "lists.members": "unknown:static",
  "lists.read": "unknown:static",
  "lists.update": "unknown:static",
  "media.delete": "unknown:static",
  "media.remoteUrlUpload": "unknown:static",
  "media.update": "unknown:static",
  "media.upload": "supported:static",
  "media.urlIngestion": "unknown:static",
  "notifications.clear": "unknown:static",
  "notifications.dismiss": "unknown:static",
  "notifications.grouped": "unknown:static",
  "notifications.list": "unknown:static",
  "notifications.pleromaChatMention": "unknown:static",
  "notifications.pleromaEmojiReaction": "unknown:static",
  "notifications.unreadCount": "unknown:static",
  "polls.create": "unsupported:static:Hollo poll creation is not mapped by this adapter yet.",
  "polls.read": "supported:static",
  "polls.vote": "supported:static",
  "posts.create": "supported:static",
  "posts.delete": "supported:static",
  "posts.history": "unknown:static",
  "posts.quote": "unsupported:static:Hollo quote creation is not mapped by this adapter yet.",
  "posts.read": "supported:static",
  "posts.reply": "supported:static",
  "posts.translate": "unknown:static",
  "posts.update": "unknown:static",
  "search.accounts": "supported:static",
  "search.hashtags": "unsupported:static:Hollo hashtag search returns an empty upstream result set.",
  "search.posts": "supported:static",
  "social.block": "supported:static",
  "social.bookmark": "supported:static",
  "social.bookmarkFolders": "unknown:static",
  "social.boost": "supported:static",
  "social.favourite": "supported:static",
  "social.follow": "supported:static",
  "social.mute": "supported:static",
  "social.reaction": "supported:static",
  "streaming.conversations": "unknown:static",
  "streaming.notifications": "unknown:static",
  "streaming.timeline": "unknown:instance",
  "timelines.hashtag": "unsupported:static:Hollo hashtag timelines are not mapped by this adapter yet.",
  "timelines.home": "supported:static",
  "timelines.list": "unknown:static",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;

exports[`server capability snapshots > mastodon > adapter 1`] = `"mastodon"`;

exports[`server capability snapshots > mastodon > capabilities 1`] = `
{
  "accounts.followers": "unknown:static",
  "accounts.following": "unknown:static",
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "supported:static",
  "accounts.updateProfile": "unknown:static",
  "auth.oauth.authorizationCode": "supported:oauth",
  "auth.oauth.clientCredentials": "unknown:static",
  "auth.oauth.refreshToken": "unsupported:static:This adapter does not assume refresh-token support.",
  "auth.passkey": "unknown:static",
  "auth.tokenInjection": "supported:static",
  "instance.nodeInfo": "supported:static",
  "instance.oauthMetadata": "unknown:static",
  "instance.peers": "unknown:static",
  "lists.create": "unknown:static",
  "lists.delete": "unknown:static",
  "lists.members": "unknown:static",
  "lists.read": "unknown:static",
  "lists.update": "unknown:static",
  "media.delete": "unknown:static",
  "media.remoteUrlUpload": "unknown:static",
  "media.update": "unknown:static",
  "media.upload": "supported:static",
  "media.urlIngestion": "unknown:static",
  "notifications.clear": "unknown:static",
  "notifications.dismiss": "unknown:static",
  "notifications.grouped": "unknown:static",
  "notifications.list": "unknown:static",
  "notifications.pleromaChatMention": "unknown:static",
  "notifications.pleromaEmojiReaction": "unknown:static",
  "notifications.unreadCount": "unknown:static",
  "polls.create": "supported:static",
  "polls.read": "supported:static",
  "polls.vote": "supported:static",
  "posts.create": "supported:static",
  "posts.delete": "supported:static",
  "posts.history": "unknown:static",
  "posts.quote": "unsupported:static:This adapter does not expose a stable quote-post API.",
  "posts.read": "supported:static",
  "posts.reply": "supported:static",
  "posts.translate": "unknown:static",
  "posts.update": "unknown:static",
  "search.accounts": "supported:static",
  "search.hashtags": "supported:static",
  "search.posts": "unsupported:static:Mastodon status search depends on instance search indexing and is not assumed by this adapter.",
  "social.block": "supported:static",
  "social.bookmark": "supported:static",
  "social.bookmarkFolders": "unknown:static",
  "social.boost": "supported:static",
  "social.favourite": "supported:static",
  "social.follow": "supported:static",
  "social.mute": "supported:static",
  "social.reaction": "unsupported:static:Mastodon-compatible base APIs do not assume emoji reaction support.",
  "streaming.conversations": "unknown:static",
  "streaming.notifications": "unknown:static",
  "streaming.timeline": "supported:instance",
  "timelines.hashtag": "supported:static",
  "timelines.home": "supported:static",
  "timelines.list": "unknown:static",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;

exports[`server capability snapshots > misskey > adapter 1`] = `"misskey"`;

exports[`server capability snapshots > misskey > capabilities 1`] = `
{
  "accounts.followers": "unknown:static",
  "accounts.following": "unknown:static",
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "supported:static",
  "accounts.updateProfile": "unknown:static",
  "auth.oauth.authorizationCode": "supported:oauth",
  "auth.oauth.clientCredentials": "unknown:static",
  "auth.oauth.refreshToken": "unsupported:static:Misskey OAuth access tokens do not use refresh tokens.",
  "auth.passkey": "unknown:static",
  "auth.tokenInjection": "supported:static",
  "instance.nodeInfo": "supported:static",
  "instance.oauthMetadata": "unknown:static",
  "instance.peers": "unknown:static",
  "lists.create": "unknown:static",
  "lists.delete": "unknown:static",
  "lists.members": "unknown:static",
  "lists.read": "unknown:static",
  "lists.update": "unknown:static",
  "media.delete": "unknown:static",
  "media.remoteUrlUpload": "unknown:static",
  "media.update": "unknown:static",
  "media.upload": "supported:static",
  "media.urlIngestion": "unknown:static",
  "notifications.clear": "unknown:static",
  "notifications.dismiss": "unknown:static",
  "notifications.grouped": "unknown:static",
  "notifications.list": "unknown:static",
  "notifications.pleromaChatMention": "unknown:static",
  "notifications.pleromaEmojiReaction": "unknown:static",
  "notifications.unreadCount": "unknown:static",
  "polls.create": "supported:static",
  "polls.read": "unknown:static",
  "polls.vote": "unknown:static",
  "posts.create": "supported:static",
  "posts.delete": "supported:static",
  "posts.history": "unknown:static",
  "posts.quote": "supported:static",
  "posts.read": "supported:static",
  "posts.reply": "supported:static",
  "posts.translate": "unknown:static",
  "posts.update": "unknown:static",
  "search.accounts": "supported:static",
  "search.hashtags": "supported:static",
  "search.posts": "supported:static",
  "social.block": "supported:static",
  "social.bookmark": "unsupported:static:Misskey bookmark and clip semantics are not mapped by this adapter yet.",
  "social.bookmarkFolders": "unknown:static",
  "social.boost": "supported:static",
  "social.favourite": "supported:static",
  "social.follow": "supported:static",
  "social.mute": "supported:static",
  "social.reaction": "supported:probe",
  "streaming.conversations": "unknown:static",
  "streaming.notifications": "unknown:static",
  "streaming.timeline": "unknown:instance",
  "timelines.hashtag": "supported:static",
  "timelines.home": "supported:static",
  "timelines.list": "unknown:static",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;

exports[`server capability snapshots > pleroma > adapter 1`] = `"pleroma"`;

exports[`server capability snapshots > pleroma > capabilities 1`] = `
{
  "accounts.followers": "unknown:static",
  "accounts.following": "unknown:static",
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "supported:static",
  "accounts.updateProfile": "unknown:static",
  "auth.oauth.authorizationCode": "supported:static",
  "auth.oauth.clientCredentials": "unknown:static",
  "auth.oauth.refreshToken": "supported:static",
  "auth.passkey": "unknown:static",
  "auth.tokenInjection": "supported:static",
  "instance.nodeInfo": "supported:static",
  "instance.oauthMetadata": "unknown:static",
  "instance.peers": "unknown:static",
  "lists.create": "unknown:static",
  "lists.delete": "unknown:static",
  "lists.members": "unknown:static",
  "lists.read": "unknown:static",
  "lists.update": "unknown:static",
  "media.delete": "unknown:static",
  "media.remoteUrlUpload": "unknown:static",
  "media.update": "unknown:static",
  "media.upload": "supported:static",
  "media.urlIngestion": "unknown:static",
  "notifications.clear": "unknown:static",
  "notifications.dismiss": "unknown:static",
  "notifications.grouped": "unknown:static",
  "notifications.list": "unknown:static",
  "notifications.pleromaChatMention": "unknown:static:Pleroma notification listing is reserved for a later ActivityPlug surface.",
  "notifications.pleromaEmojiReaction": "unknown:static:Pleroma notification listing is reserved for a later ActivityPlug surface.",
  "notifications.unreadCount": "unknown:static",
  "polls.create": "supported:static",
  "polls.read": "supported:static",
  "polls.vote": "supported:static",
  "posts.create": "supported:static",
  "posts.delete": "supported:static",
  "posts.history": "unknown:static",
  "posts.quote": "unsupported:static:This adapter does not expose a stable quote-post API.",
  "posts.read": "supported:static",
  "posts.reply": "supported:static",
  "posts.translate": "unknown:static",
  "posts.update": "unknown:static",
  "search.accounts": "supported:static",
  "search.hashtags": "supported:static",
  "search.posts": "supported:static",
  "social.block": "supported:static",
  "social.bookmark": "supported:static",
  "social.bookmarkFolders": "unknown:static:Pleroma bookmark folders are not exposed by the current public API surface.",
  "social.boost": "supported:static",
  "social.favourite": "supported:static",
  "social.follow": "supported:static",
  "social.mute": "supported:static",
  "social.reaction": "supported:static",
  "streaming.conversations": "unknown:static",
  "streaming.notifications": "unknown:static",
  "streaming.timeline": "unknown:instance",
  "timelines.hashtag": "supported:static",
  "timelines.home": "supported:static",
  "timelines.list": "unknown:static",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;
